feat: add swagger documentation on employee routes
